--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
+    "react-spinners": "^0.5.4",
     "react-thunk": "^1.0.0",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.2",
